--- a/css/styles.css
+++ b/css/styles.css
@@ -49,6 +49,9 @@ img {
 .navigation-list {
   display: flex;
   gap: 40px;
+}
+
+.navigation-link {
   padding-top: 24px;
   padding-bottom: 24px;
 }
@@ -56,8 +59,8 @@ img {
 .contacts-list {
   display: flex;
   gap: 40px;
-  padding-top: 24px;
-  padding-bottom: 24px;
+  /*padding-top: 24px;
+  padding-bottom: 24px;*/
 }
 
 .navigation-logo {
