--- a/css/styles.css
+++ b/css/styles.css
@@ -51,22 +51,6 @@ img {
   gap: 40px;
 }
 
-.navigation-link {
-  padding-top: 24px;
-  padding-bottom: 24px;
-}
-
-.contacts-list {
-  display: flex;
-  gap: 40px;
-  /*padding-top: 24px;
-  padding-bottom: 24px;*/
-}
-
-.navigation-logo {
-  margin-right: 76px;
-}
-
 /*section navigation*/
 
 .navigation-logo {
@@ -78,6 +62,7 @@ img {
   line-height: 1.17;
   letter-spacing: 0.03em;
   text-decoration: none;
+  margin-right: 76px;
 }
 
 .studio {
@@ -94,6 +79,8 @@ img {
   font-weight: 500;
   letter-spacing: 0.02em;
   text-decoration: none;
+  padding-top: 24px;
+  padding-bottom: 24px;
 }
 
 .navigation-link:hover,
@@ -107,6 +94,8 @@ img {
 
 .contacts-list {
   list-style-type: none;
+  display: flex;
+  gap: 40px;
 }
 
 .contacts-link {
@@ -138,7 +127,7 @@ img {
   font-weight: 700;
   line-height: 1.07;
   letter-spacing: 0.02em;
-  width: 496px;
+  max-width: 496px;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 64px;
@@ -168,9 +157,23 @@ img {
 }
 
 /*section about*/
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
 
 .about-list {
   list-style-type: none;
+  display: flex;
+  gap: 24px;
 }
 
 .about-list-title {
@@ -179,6 +182,7 @@ img {
   font-weight: 500;
   line-height: 1.2;
   letter-spacing: 0.02em;
+  margin-bottom: 8px;
 }
 
 .about-list-text {
@@ -186,6 +190,10 @@ img {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
+}
+
+.about-list-link {
+  width: calc((100-24 * 3)) / 4;
 }
 
 /*section team*/
@@ -196,6 +204,8 @@ img {
 
 .team-list {
   list-style-type: none;
+  display: flex;
+  gap: 24px;
 }
 
 .team-list-item {
@@ -210,6 +220,7 @@ img {
   line-height: 1.11;
   letter-spacing: 0.02em;
   text-transform: capitalize;
+  margin-bottom: 72px;
 }
 
 .team-list-title {
@@ -227,6 +238,11 @@ img {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
+}
+
+.name-position {
+  padding-top: 32px;
+  padding-bottom: 32px;
 }
 
 /*section portfolio*/
