--- a/css/styles.css
+++ b/css/styles.css
@@ -193,7 +193,7 @@ img {
 }
 
 .about-list-link {
-  width: calc((100%-24 * 3)) / 4;
+  width: calc((100%-24 * 3) / 4);
 }
 
 /*section team*/
@@ -264,10 +264,12 @@ img {
   display: flex;
   flex-wrap: wrap;
   column-gap: 24px;
+  row-gap: 60px;
 }
 
 .portfolio-list-item {
   background-color: #ffffff;
+  /*border: 1px solid #e7e9fc;*/
 }
 
 .portfolio-list-title {
@@ -285,10 +287,17 @@ img {
   letter-spacing: 0.02em;
 }
 
+.card-text {
+  padding-top: 32px;
+  padding-bottom: 32px;
+}
+
 /*bottom*/
 
 .bottom {
   background-color: #2e2f42;
+  padding-top: 100px;
+  padding-bottom: 100px;
 }
 
 .studio-bottom {
@@ -301,4 +310,10 @@ img {
   font-weight: 400;
   line-height: 1.5;
   letter-spacing: 0.02em;
+  max-width: 264px;
+}
+
+.bottom-logo {
+  display: inline-block;
+  margin-bottom: 16px;
 }
