--- a/css/styles.css
+++ b/css/styles.css
@@ -278,6 +278,7 @@ img {
   font-weight: 500;
   line-height: 1.2;
   letter-spacing: 0.02em;
+  margin-bottom: 8px;
 }
 
 .portfolio-list-text {
@@ -288,8 +289,10 @@ img {
 }
 
 .card-text {
-  padding-top: 32px;
-  padding-bottom: 32px;
+  padding: 32px 16px;
+  border-right: 1px solid #e7e9fc;
+  border-left: 1px solid #e7e9fc;
+  border-bottom: 1px solid #e7e9fc;
 }
 
 /*bottom*/
