--- a/css/styles.css
+++ b/css/styles.css
@@ -192,7 +192,7 @@ img {
   letter-spacing: 0.02em;
 }
 
-.about-list-link {
+.about-list-item {
   width: calc((100%-24 * 3) / 4);
 }
 
@@ -257,6 +257,7 @@ img {
   line-height: 1.11;
   letter-spacing: 0.02em;
   text-transform: capitalize;
+  margin-bottom: 72px;
 }
 
 .portfolio-list {
@@ -264,7 +265,7 @@ img {
   display: flex;
   flex-wrap: wrap;
   column-gap: 24px;
-  row-gap: 60px;
+  row-gap: 48px;
 }
 
 .portfolio-list-item {
@@ -293,6 +294,10 @@ img {
   border-right: 1px solid #e7e9fc;
   border-left: 1px solid #e7e9fc;
   border-bottom: 1px solid #e7e9fc;
+}
+
+.portfolio-list-item {
+  width: calc((100%-24 * 2) / 3);
 }
 
 /*bottom*/
