--- a/css/styles.css
+++ b/css/styles.css
@@ -62,6 +62,9 @@ img {
   line-height: 1.17;
   letter-spacing: 0.03em;
   text-decoration: none;
+}
+
+.top-logo {
   margin-right: 76px;
 }
 
@@ -79,6 +82,7 @@ img {
   font-weight: 500;
   letter-spacing: 0.02em;
   text-decoration: none;
+  display: block;
   padding-top: 24px;
   padding-bottom: 24px;
 }
@@ -105,6 +109,9 @@ img {
   line-height: 1.5;
   letter-spacing: 0.02em;
   text-decoration: none;
+  display: block;
+  padding-top: 24px;
+  padding-bottom: 24px;
 }
 
 .contacts-link:hover,
@@ -193,7 +200,7 @@ img {
 }
 
 .about-list-item {
-  width: calc((100%-24 * 3) / 4);
+  width: calc((100% - 24px * 3) / 4);
 }
 
 /*section team*/
@@ -211,6 +218,7 @@ img {
 .team-list-item {
   background-color: #ffffff;
   border-radius: 0px 0px 4px 4px;
+  width: calc((100% - 24px * 3) / 4);
 }
 
 .team-title {
@@ -270,7 +278,7 @@ img {
 
 .portfolio-list-item {
   background-color: #ffffff;
-  /*border: 1px solid #e7e9fc;*/
+  width: calc((100% - 24px * 2) / 3);
 }
 
 .portfolio-list-title {
